# Remote-procedure-call-

./: .gitignore  Documentatie_Proiect_RPC.odt  Documentation.md  README.md  build_client.sh  build_server.sh  install_rpc.sh  run.sh
Client/: error_log.txt  main_client  main_client.cpp
RPC/: CMakeLists.txt
RPC/include/RPC/: base_client.h  client_socket.h  encryption.h  errors.h  functions.h  procedure_format.pb.h  rpc_client.h  rpc_server.h  server_socket.h  socket_connection.h
RPC/src/client/: base_client.cpp  base_client_async.cpp  rpc_client.cpp  rpc_client_async.cpp
RPC/src/common/: encryption.cpp  errors.cpp
RPC/src/proto/: procedure_format.pb.cc  procedure_format.proto
RPC/src/server/: rpc_server.cpp  server_functions.cpp
RPC/src/transport/: client_socket.cpp  server_socket.cpp  socket_connection.cpp
Server/: Clients.txt  error_log.txt  main_server  main_server.cpp  test_file_0.txt  test_file_1.txt  test_file_2.txt  test_file_3.txt  test_file_4.txt
Shared/: Errors.cpp
